# onepilot_v0

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
api/: connection_service.py  database.py  main.py  repository.py  schemas.py
connectors/: Dynamics_connector.py  __init__.py  odata_connector.py  rest_connector.py  sage_connector.py  sap_connector.py  sql_connector.py
core/: __init__.py  auth_manager.py  base_connector.py  plugin_manager.py
db/migrations/: 001_init.sql
docker/nginx/: default.conf
tests/: test_phase1.py
ui/: index.html
