[tool.poetry]
name = "onepilot"
version = "0.1.0"
description = "Universal Data Access Layer - OnePilot Phase 1"
readme = "README.md"
authors = ["OnePilot <dev@onepilot.local>"]
packages = [
    { include = "core" },
    { include = "connectors" },
    { include = "api" },
]

[tool.poetry.dependencies]
python          = "^3.11"
fastapi         = "^0.110.0"
uvicorn         = { version = "^0.27.0", extras = ["standard"] }
pydantic        = "^2.6.0"
sqlalchemy      = "^2.0.0"
psycopg2-binary = "^2.9.9"
pymysql         = "^1.1.0"
pyodbc          = "^5.1.0"
requests        = "^2.31.0"
python-dotenv   = "^1.0.0"
asyncpg         = "^0.29.0"
redis           = "^5.0.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest     = "^8.1.0"
pytest-cov = "^5.0.0"
httpx      = "^0.27.0"
ruff       = "^0.3.0"
mypy       = "^1.9.0"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --cov=core --cov=connectors --cov-report=term-missing"
pythonpath = ["."]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"